update code and analysis description for transformer.ipynb

--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2.2 Transformer Model Architecture\n",
+    "## 2.1 Transformer Model Architecture\n",
     "The OpenAI transformer is an adaptation of the well-known transformer from Google Brain's 2017 paper. \n",
     "\n",
     "![title](assets/transformer_arch.png)\n",
@@ -61,7 +61,7 @@
     "\n",
     "where $L1$, $L2$ and $L3$ are the likelihoods for the language modeling objective, task-specific objective and combined objective respectively.\n",
     "\n",
-    "## 2.3 Task-specific input transformations\n",
+    "## 2.2 Task-specific input transformations\n",
     "OpenAI designed their transformer to generalize to a range of natural language tasks. In order to do this, they allow the definition of custom task-specific \"heads\" as per the below schematic. The task-specific head acts on top of the base transformer language model, and is defined in the ```DoubleHeadModel``` class in ```model_pytorch.py```. \n",
     "\n",
     "![title](assets/openai_taskheads.png)\n",
@@ -335,9 +335,9 @@
     "\n",
     "To study the performance of the transformer model, we first study the hyperparameter selection.  The main focus is on adjusting the dropout of the various layers, and the LM coefficient $\\lambda$, which controls the tradeoff between the language modeling head and the task head as per the following formula from the OpenAI paper:\n",
     "\n",
-    "$$L_3(\\mathcal{C}) = L_2(\\mathcal{C}) + \\lambda \\cdot L_1(\\mathcal{C})$$\n",
+    "$$L_3(C) = L_2(C) + \\lambda \\cdot L_1(C)$$\n",
     "\n",
-    "where $\\mathcal{C}$ is a labelled input dataset, $L_2$ is the likelihood function for the classification head, and $L_1$ is the likehilood function for the language modeling head.  Three trials are run for most configurations - the only times single trials are run are in cases where the first trial showed a large enough change in results to be fairly certain that the hyperparameter change was causing a significant difference."
+    "where $C$ is a labelled input dataset, $L_2$ is the likelihood function for the classification head, and $L_1$ is the likehilood function for the language modeling head.  Three trials are run for most configurations - the only times single trials are run are in cases where the first trial showed a large enough change in results to be fairly certain that the hyperparameter change was causing a significant difference."
    ]
   },
   {
@@ -426,7 +426,7 @@
    "metadata": {},
    "source": [
     "### Dropout\n",
-    "The training accuracies tend to be extremely high compared to the validation and test accuracies, most likely due to the small size of the dataset relative to the number of parameters in the model.  Typically, this can be mitigated by varying dropout.  Since we are not modifying the unsupervised pretrained weights (we are reusing OpenAI's publicly shared parameter files), we only modify the droupout of the classification layer in our model.\n",
+    "The training accuracies tend to be extremely high compared to the validation and test accuracies, most likely due to the small size of the dataset relative to the number of parameters in the model.  Typically, this can be mitigated by varying dropout.  Since we are not modifying the unsupervised pretrained weights (we are reusing OpenAI's publicly shared parameter files), we only modify the dropout of the classification layer in our model.\n",
     "\n",
     "The below four commands show the input arguments used for the first trial of each value of classification dropout tested."
    ]
